# Coolio-thing-vibe-code-3

./: .gitignore  CMakeLists.txt  README.md  mod.json  qpm.json
.github/workflows/: build.yml
include/: BeatLeaderAPI.hpp  Config.hpp  FriendLeaderboardUI.hpp  ModSettings.hpp  SnipeNotification.hpp
include/fmt/: base.h  xchar.h
src/: BeatLeaderAPI.cpp  Config.cpp  FriendLeaderboardUI.cpp  ModSettings.cpp  SnipeNotification.cpp  main.cpp
